--- a/task_management_system/requirements.txt
+++ b/task_management_system/requirements.txt
@@ -18,11 +18,14 @@ packaging==24.1
 prompt_toolkit==3.0.47
 psycopg2-binary==2.9.9
 python-dateutil==2.9.0.post0
+python-http-client==3.3.7
 pytz==2024.1
 PyYAML==6.0.1
 redis==5.0.7
+sendgrid==6.11.0
 six==1.16.0
 sqlparse==0.5.0
+starkbank-ecdsa==2.2.0
 typing_extensions==4.12.2
 tzdata==2024.1
 uritemplate==4.1.1
