--- a/task_management_system/requirements.txt
+++ b/task_management_system/requirements.txt
@@ -22,7 +22,8 @@ python-http-client==3.3.7
 pytz==2024.1
 PyYAML==6.0.1
 redis==5.0.7
-sendgrid==6.11.0
+sendgrid==3.6.5
+sendgrid-django==4.2.0
 six==1.16.0
 sqlparse==0.5.0
 starkbank-ecdsa==2.2.0
